--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<div class="header">
+<div class="typer">
     <h1>My Website</h1>
     <p>A website created by me.</p>
   </div>
