--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <div class="typewriter">
     <h1>My Website</h1>
     <p>A website created by me.</p>
+    <p>Calvin's site in under construction</p>
   </div>
