wrapped html in a html file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
+<html>
 <div class="typewriter">
     <h1>My Website</h1>
     <p>A website created by me.</p>
     <p>Calvin's site in under construction</p>
   </div>
+</html>
