--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-<div class="typewriter">
-    <h1>My Website</h1>
-    <p>A website created by me.</p>
-    <p>Calvin's site in under construction</p>
-  </div>
+    <head>
+        <meta charset='utf-8'>
+        <meta name='viewport' content='width=device-width initial-scale-1.0'>
+        <title>Calvin's Website</title>
+        <link rel='stylesheet' href='/style.css'/>
+    </head>
+    <body>
+        <div class="typewriter">
+            <h1>My Website</h1>
+            <p>A website created by me.</p>
+            <p>Calvin's site in under construction</p>
+        </div>
+    </body>
 </html>
