--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     </head>
     <body>
         <div class="typewriter">
-            <h1>My Website</h1>
-            <p>A website created by me.</p>
+            <h1>Calvin's Website</h1>
             <p>Calvin's site in under construction</p>
         </div>
     </body>
