--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="typewriter">
             <h1>Calvin's Website</h1>
-            <p>Calvin's site in under construction</p>
+            <p>Calvin's site is under construction</p>
         </div>
     </body>
 </html>
