--- a/index.html
+++ b/index.html
@@ -1,15 +1,253 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width initial-scale-1.0'>
-        <title>Calvin's Website</title>
-        <link rel='stylesheet' href='/style.css'/>
-    </head>
-    <body>
-        <div class="typewriter">
-            <h1>Calvin's Website</h1>
-            <p>Calvin's site is under construction</p>
+<html class="no-js" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Portfolio</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+    <!-- End #mobile-menu-toggle -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
-    </body>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
+                <a href="#education">Education</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </header>
+    <!-- End header -->
+
+    <div id="lead">
+        <div id="lead-content">
+            <h1>Calvin Ho/h1>
+            <h2>Software Engineer</h2>
+            <a href="#" class="btn-rounded-white">Download Resume</a>
+        </div>
+        <!-- End #lead-content -->
+
+        <div id="lead-overlay"></div>
+
+        <div id="lead-down">
+            <span>
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+        </div>
+        <!-- End #lead-down -->
+    </div>
+    <!-- End #lead -->
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">About Me</h2>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        I'm a full-stack software engineer proficient in React, Node, and Javascript. I have an interest in applying the latest frameworks and technologies to create full-stack mobile and web applications. The most important thing for me as a software engineer is being innovative and creative with my approaches to complex situations. I also enjoy the outdoors and have a Pomeranian named Oreo!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End #about -->
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="September 2015 – September 2016">
+                <h3>Employer Name</h3>
+                <h4>Job Title</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+
+            <div data-date="September 2016 – January 2017">
+                <h3>EXR</h3>
+                <h4>Market Research Analyst Intern</h4>
+                <p>
+                    •	Responsibilities included field research through databases such as Oasis, social media editor, and prepared pricing and comparables 
+                    •	Utilized market research techniques which included surveys, observations, trends, and competition within Brooklyn neighborhoods 
+                    •	Received direct mentorship and got full exposure to the entire process of commercial real estate 
+                </p>
+            </div>
+
+            <div data-date="August 2012 – September 2016">
+                <h3>J.P. Morgan Chase & Co.</h3>
+                <h4>Intern</h4>
+                <ul>
+                    <li>
+                        Assisted in financial projects, reviewed spreadsheets of company clients, and attended group meetings with managers of other departments
+                    </li>
+                    <li>
+                        Presented to VPs and managers on certain topics such as securities and hedge funds
+                    </li>
+                    <li>
+                        Emphasis of excel involved in key projects and creation of financial charts for client profiles
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- End #experience -->
+
+    <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>Fullstack Academy of Code</h3>
+            <span class="education-date">Oct 2018 - Feb 2019</span>
+            <h4>Web Development Bootcamp</h4>
+            <p>
+                A 3 month Web development intensive with the focus of teaching aspiring software engineers the NERDS stack. Students were taught Node, Express, React/Redux, Database using PostgreSQL through a junior phase and later made projects through a senior phase.
+            </p>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>City University of New York Queens College</h3>
+            <span class="education-date">Sept 2011 - May 2017</span>
+            <h4>Bachelor of Arts in Economics/Sociology</h4>
+        </div>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+
+    <div id="projects" class="background-alt">
+        <h2 class="heading">Projects</h2>
+        <div class="container">
+            <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Mercury Shop</h3>
+                        <p>
+                            An Ecommerce site that allows users to create an account and have a personal shopping cart to checkout inventory. Uses Express as its web framework and PostgreSQL to manage the backend database.
+                        </p>
+                        <a href="https://github.com/mercuryshop/mercuryshop">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/recipeasy.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Recipeasy!</h3>
+                        <p>
+                            A mobile application that allows users to find recipes when provided with a set amount of ingredients. Also contains a camera feature that parses texts on receipts that return the ingredients shown on that receipt through Google vision API. Users are authenticated through Google's Firebase with their saved recipes and pantry always kept. Project was done in an agile environment with three other individuals for our final capstone project at Fullstack Academy.
+                        </p>
+                        <a href="https://github.com/recipeasy-capstone/recipeasy">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/Lettucemeet.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Lettuce Meet!</h3>
+                        <p>
+                            A mobile application that allows users to make meetings with other users at local restaurants nearby. Uses a react-native framework that incorporates Yelp's API through Axios, a promise based HTTP client.
+                        </p>
+                        <a href="https://github.com/calvinho1214/LunchBreak">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+            </div>
+        </div>
+    </div>
+    <!-- End #projects -->
+
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>JavaScript</li>
+            <li>Node.js</li>
+            <li>React</li>
+            <li>Redux</li>
+            <li>PostgreSQL</li>
+            <li>Google Firebase</li>
+            <li>Google Firestore</li>
+            <li>Mocha</li>
+            <li>Chai</li>
+            <li>Semantic UI</li>
+            <li>CSS</li>
+            <li>HTML 5</li>
+            <li>Bootstrap</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 copyright">
+                    <p>
+                        Copyright &copy; 2019 Calvin Ho
+                    </p>
+                </div>
+                <div class="col-sm-2 top">
+                    <span id="to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="col-sm-5 social">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/calvinho1214" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/calvinkho/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/scripts.min.js"></script>
+</body>
+
 </html>
