--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
             <li>
                 <a href="#skills">Skills</a>
             </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
         </ul>
     </header>
     <!-- End header -->
@@ -84,13 +81,6 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
 
             <div data-date="September 2016 – January 2017">
                 <h3>EXR</h3>
@@ -164,7 +154,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/recipeasy.png" />
+                        <img src="images/recipeasy_logo-01.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -180,7 +170,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Lettucemeet.png" />
+                        <img src="images/lettucemeetpic.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
