--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Calvin Ho/h1>
+            <h1>Calvin Ho</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1OoHXYYTf8IZxkRI5v3W0BZn2xvFtAejV/view" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
