--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
     <div id="lead">
         <div id="lead-content">
+            <img src="images/Selfie (1).jpg" />
             <h1>Calvin Ho</h1>
             <h2>Software Engineer</h2>
             <a href="https://drive.google.com/file/d/1OoHXYYTf8IZxkRI5v3W0BZn2xvFtAejV/view" class="btn-rounded-white">Download Resume</a>
