fixed experience tabs

--- a/index.html
+++ b/index.html
@@ -86,11 +86,17 @@
             <div data-date="September 2016 – January 2017">
                 <h3>EXR</h3>
                 <h4>Market Research Analyst Intern</h4>
-                <p>
-                    •	Responsibilities included field research through databases such as Oasis, social media editor, and prepared pricing and comparables 
-                    •	Utilized market research techniques which included surveys, observations, trends, and competition within Brooklyn neighborhoods 
-                    •	Received direct mentorship and got full exposure to the entire process of commercial real estate 
-                </p>
+                <ul>
+                        <li>
+                            Responsibilities included field research through databases such as Oasis, social media editor, and prepared pricing and comparables 
+                        </li>
+                        <li>
+                            Utilized market research techniques which included surveys, observations, trends, and competition within Brooklyn neighborhoods 
+                        </li>
+                        <li>
+                                Received direct mentorship and got full exposure to the entire process of commercial real estate 
+                        </li>
+                    </ul>
             </div>
 
             <div data-date="August 2012 – September 2016">
