--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <li>
                 <a href="#skills">Skills</a>
             </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
         </ul>
     </header>
     <!-- End header -->
@@ -214,6 +217,11 @@
         </ul>
     </div>
     <!-- End #skills -->
+
+    <div id="contact">
+        <h2>Get in Touch</h2>
+        <p>Email: Calvinho1214@gmail.com</p>
+    </div>
 
     <footer>
         <div class="container">
