added a bit in my bio

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm a full-stack software engineer proficient in React, Node, and Javascript. I have an interest in applying the latest frameworks and technologies to create full-stack mobile and web applications. The most important thing for me as a software engineer is being innovative and creative with my approaches to complex situations. I also enjoy the outdoors and have a Pomeranian named Oreo!
+                        I'm a full-stack software engineer proficient in React, Node, and Javascript. I have an interest in applying the latest frameworks and technologies to create full-stack mobile and web applications. The most important thing for me as a software engineer is being innovative and creative with my approaches to complex situations. I am currently looking for a Full-stack engineer role in a company but am also open to any engineer role not specific to Full-stack I also enjoy the outdoors and have a Pomeranian named Oreo!
                     </p>
                 </div>
             </div>
