--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="experience" class="background-alt">
+    <div id="experience">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
 
@@ -182,7 +182,7 @@
     </div>
     <!-- End #experience -->
 
-    <div id="education">
+    <div id="education" class="background-alt">
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Fullstack Academy of Code</h3>
