adding new project smoothies title and paragraph

--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/recipeasy_logo-01.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Smoothies</h3>
+                        <p>
+                            A movie searching application created through react and incorporating react hooks! First project using react hooks, it also uses axios to access Omdb's movie api.
+                        </p>
+                        <a href="https://github.com/calvinho1214/smoothies">View Project</a>
+                        <br>
+                        <a href="https://www.youtube.com/watch?list=PLx0iOsdUOUmmL875tGLv6WKi_JSPzrrrQ&v=XcTqUfGZ3Co">Video Walkthrough</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/lettucemeetpic.png" />
                     </div>
                     <!-- End .project-image -->
