--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/recipeasy_logo-01.png" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -131,9 +131,7 @@
                             A movie searching application created through react and incorporating react hooks! First project using react hooks, it also uses axios to access Omdb's movie api.
                         </p>
                         <a href="https://github.com/calvinho1214/smoothies">View Project</a>
-                        <br>
-                        <a href="https://www.youtube.com/watch?list=PLx0iOsdUOUmmL875tGLv6WKi_JSPzrrrQ&v=XcTqUfGZ3Co">Video Walkthrough</a>
-                    </div>
+                        <br>                    </div>
                     <!-- End .project-info -->
                 </div>
 
